# sl-wasm

./: .gitignore  .gitmodules  Makefile  gmoku-sl.patch  sl.c  sl.h  sl.wasm
wasm/: .gitignore  CMakeLists.txt  README.md  build.sh  inotify.sh  main.c  run.sh  send.sh  server.sh  sigint.sh  watch-migration.sh
wasm/img/: stack9.img
